[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Multi-PDF Chatbot with RAG using Ollama and LangChain"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "streamlit",
    "langchain",
    "langchain-community",
    "pypdf",
    "chromadb",
    "ollama",
    "scikit-learn",
    "numpy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rag_chatbot"]
