[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Multi-PDF Chatbot with RAG using Ollama and LangChain"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "streamlit",
    "langchain==1.2.10",
    "langchain-core==1.2.17,
    "langchain-community=0.4.1",
    "langchain-ollama=1.0.1",
    "langchain-chroma=1.1.0",
    "langchain-text-splitters=1.1.1",
    "langchain-classic=1.0.1",
    "pypdf",
    "chromadb",
    "ollama",
    "scikit-learn",
    "numpy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rag_chatbot"]
